test/libsolidity/syntaxTests/freeFunctions/free_fallback.sol
fallback(){}
// ----
// ParserError 7858: (0-8): Expected pragma, import directive or contract/interface/library/struct/enum/constant/function/error definition.
